# credit-system

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.consumer  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
ecs/: app.py
ecs/api/: __init__.py  dependencies.py  exceptions.py  middleware.py
ecs/api/routes/: __init__.py
ecs/core/: config.py  db.py  exceptions.py  logging.py  security.py
ecs/models/domain/: __init__.py  client.py  credit.py  emotion.py  transactions.py  user.py
ecs/models/schemas/: __init__.py  client.py  credit.py  emotion.py  features.py  token.py
ecs/repositories/: __init__.py  exceptions.py
ecs/repositories/implementations/: __init__.py  client_repository.py  credit_repository.py  emotion_repository.py  transaction_repository.py  user.py  user_repository.py
ecs/repositories/interfaces/: __init__.py  client.py  (+4 more)
ecs/services/: __init__.py  auth_service.py  credit_service.py  dependencies.py  emotion_service.py  exceptions.py
ecs/workers/: emotion_consumer.py  jobs.py
migrations/: env.py
migrations/versions/: 247d94d7788a_initial_schema.py  384bf1f72774_update_risk_assessments_remove_decision_.py  38bd0fa29699_update_risk_assessments_add_expires_at_.py  71aedf6b7857_add_clients_table.py  8c5d33f9d479_initial_schema.py  f405ae2d2dca_update_credit_offer_nullable_fields.py
scripts/: clean_dev.py  produce_emotional_events.py  seed_dev.py
tests/: README.md  conftest.py
tests/api/: conftest.py
tests/services/: test_credit_service.py
(+11 files in other folders)
